--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=myuser
 spring.datasource.password=mypassword
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG 
+logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
