--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb?allowPublicKeyRetrieval=t
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
 
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=jujimufu
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=myapp
+
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG 
 logging.level.com.michael_gregory.blog_api.rest.BlogEntryController=DEBUG
